tests/language_2/constructor/call_wrong_argument_count_test.dart
// Copyright (c) 2011, the Dart project authors.  Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

class Stockhorn {
  Stockhorn(int a);
}

main() {
  new Stockhorn(1);
  new Stockhorn();
  //           ^^
  // [analyzer] COMPILE_TIME_ERROR.NOT_ENOUGH_POSITIONAL_ARGUMENTS
  // [cfe] Too few positional arguments: 1 required, 0 given.
}
